<resources>
    <string name="app_name">Single Screen</string>
    <string name="company_name">FC BOCA PREDATORS</string>
    <string name="company_description">FC BOCA® Predators is extremely proud of its select travel soccer U10 - U18 programs for Boys and Girls.</string>
    <string name="office_address">222 Yamato Rd. Suite 106-229  Boca Raton, FL 33431</string>
    <string name="office_email">Contact@fcbocapredators.org</string>
    <string name="office_number">561-609-1657</string>
</resources>
